--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!-- BigInt -->
-  <script src="https://peterolson.github.io/BigInteger.js/BigInteger.min.js"></script>
 </head>
 <body>
   <app-root></app-root>
+  <!-- https://github.com/aws/aws-amplify/issues/678 fix: -->
+  <script>
+    if (global === undefined) {
+      var global = window;
+    }
+  </script>
+  <!-- https://github.com/aws/aws-amplify/issues/678 fix end-->
 </body>
 </html>
